add //config/cc:verbose; otherlibs/unix hdr deps; misc minor fixes

--- a/config/cc/BUILD.bazel
+++ b/config/cc/BUILD.bazel
@@ -7,3 +7,6 @@ bool_flag(
     visibility = ["//visibility:public"]
 )
 
+bool_flag(name = "verbose", build_setting_default = False,
+          visibility = ["//visibility:public"])
+config_setting(name = "verbose?", flag_values = {":verbose": "True"})
