--- a/parsing/BUILD.bazel
+++ b/parsing/BUILD.bazel
@@ -421,7 +421,7 @@ genrule(
 
 compiler_module(
     name   = "Lexer",
-    struct = "lexer_ml",
+    struct = "lexer.ml",
     sig    = "Lexer_cmi",
     opts = MODULE_OPTS,
     deps   = [
