--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -47,7 +47,7 @@ register_execution_platforms(
 register_toolchains(
 
     "//toolchain/selector/local:dev",
-    "//toolchain/selector/local:cc",
+    "//toolchain/selector/local:mustache",
 
     "//toolchain/selector/local:boot",
     "//toolchain/selector/local:baseline",
