--- a/toolchain/adapter/BUILD.bazel
+++ b/toolchain/adapter/BUILD.bazel
@@ -2,7 +2,7 @@ exports_files(["BUILD.bazel"])
 
 load("//toolchain/adapter:BUILD.bzl", "toolchain_adapter")
 load("//toolchain/adapter:DEV_TOOLCHAIN.bzl", "dev_toolchain_adapter")
-load("//toolchain/adapter:mustache_toolchain.bzl", "mustache_toolchain_adapter")
+load("//toolchain/adapter:mustache_tc_adapter.bzl", "mustache_toolchain_adapter")
 
 ## NB: these are all the same, but for debugging they need different
 ## names. Use aliases?
