cc integration; unify target mgmt across rules; merge_json
* ocaml compilers now integrate with Bazel cc toolchain - cmds issued
by ocaml cc driver to assemble and link native code are extracted from
the bazel cc toolchain (using mustache)
* move logic for determining extension (.cmo/cmx etc) and tool (with
or w/o ocamlrun) moved to function, so all rules use the same logic
* it's all hideous but it seems to work

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -47,7 +47,9 @@ register_execution_platforms(
 register_toolchains(
 
     "//toolchain/selector/local:dev",
+
     "//toolchain/selector/local:mustache",
+    "//toolchain/selector/local:preproc",
 
     "//toolchain/selector/local:boot",
     "//toolchain/selector/local:baseline",
