--- a/toolchain/type/BUILD.bazel
+++ b/toolchain/type/BUILD.bazel
@@ -37,7 +37,7 @@
 
 toolchain_type(name = "ocaml", visibility = ["//visibility:public"])
 
-# toolchain_type(name = "boot", visibility = ["//visibility:public"])
+toolchain_type(name = "boot", visibility = ["//visibility:public"])
 
 toolchain_type(name = "baseline", visibility = ["//visibility:public"])
 
