--- a/runtime/BUILD.bazel
+++ b/runtime/BUILD.bazel
@@ -40,21 +40,13 @@ RUNTIME_DEFINES = select({
 ## "ocaml_runtime".
 cc_library(
     name = "camlrun",
-    # alwayslink = True,
     linkstatic = True,
     srcs = [
         "//runtime:common_c_sources",
         "//runtime:bytecode_only_c_sources",
-        # "//runtime/caml:domain_state.h",
-        # "//runtime/caml:fail_h",
-        # "//runtime/caml:instruct_h",
-        # ":primitives.h"
-    ] + select({
-    # "//platform/target:vm?": ["//runtime:bytecode_only_c_sources"],
-    # "//conditions:default": ["//runtime:native_only_c_sources"],
-    "//conditions:default": []
-    }),
+    ],
     deps = [
+        ":addrmap",
         ":hdrs",
         "//runtime/caml:hdrs",
         "//runtime/caml:domain_state_h",
@@ -98,7 +90,8 @@ cc_library(
     visibility = [
         "//:__pkg__",
         "//boot:__subpackages__",
-        "//lib:__pkg__"
+        "//lib:__pkg__",
+        "//toolchain/adapter:__pkg__"
     ],
 )
 
@@ -106,16 +99,11 @@ cc_library(
 ###########
 cc_library(
     name = "asmrun",
-    # alwayslink = True,
     linkstatic = True,
-    # linkshared = True,
     srcs = [
         "//runtime:common_c_sources",
         "//runtime:native_only_c_sources",
         ":asm",
-        "//runtime/caml:fail.h",
-        "//runtime/caml:s.h",
-        # ":primitives_h"
     ],
     # features = [
     #     "-supports_pic",    # disable pic
@@ -132,7 +120,6 @@ cc_library(
         "-Iruntime/caml",
         "-I$(GENDIR)/runtime",
         "-I$(GENDIR)/runtime/caml",
-
         "$(OC_CFLAGS)",
         "$(OC_CPPFLAGS)",
     ] + select({
@@ -165,7 +152,6 @@ cc_library(
     }),
     ## NB: static cc_library does not link, so these have no effect:
     linkopts = [
-        "FOOBAR",
         "$(OC_LDFLAGS)",
         "-ffunction-sections",
         ## macos std linker (ld) debugging:
@@ -278,48 +264,6 @@ filegroup(
     ]
 )
 
-# COMMON_C_SOURCES = [
-#     "addrmap.c",
-#     "afl.c",
-#     "alloc.c",
-#     "array.c",
-#     "backtrace.c",
-#     "bigarray.c",
-#     "callback.c",
-#     "codefrag.c",
-#     "compare.c",
-#     "custom.c",
-#     "debugger.c",
-#     "domain.c",
-#     "dynlink.c",
-#     "extern.c",
-#     "fiber.c",
-#     "finalise.c",
-#     "floats.c",
-#     "gc_ctrl.c",
-#     "gc_stats.c",
-#     "globroots.c",
-#     "hash.c",
-#     "intern.c",
-#     "ints.c",
-#     "io.c",
-#     "lexing.c",
-#     "lf_skiplist.c",
-
-#     ## if we compile main.c into libcamlrun.a zig will fail to find main
-#     ## entry point.
-
-#     ## but main is not really appropriate for a library anyway. but
-#     ## then why is it shared with both bc and native? why does the
-#     ## latter need it?
-
-#     # "main.c",
-
-#     "major_gc.c",
-#     "md5.c",
-#     "memory.c",
-#     "memprof.c",
-
 ## NB: everything in meta.c is guarded by #ifndef NATIVE_CODE and at
 ## top of file: "/* Primitives for the toplevel */" makefiles always
 ## compile it. for libcamlrun w/o -DNATIVE_CODE but with it for libasmrun.
@@ -334,31 +278,12 @@ filegroup(
 
 #     "meta.c",
 
-#     "minor_gc.c",
-#     "misc.c",
-#     "obj.c",
-#     "parsing.c",
-#     "platform.c",
-#     "printexc.c",
-#     "prng.c",
-#     "roots.c",
-#     "runtime_events.c",
-#     "shared_heap.c",
-#     "signals.c",
-#     "skiplist.c",
-#     "startup_aux.c",
-#     "str.c",
-#     "sync.c", "sync_posix.h",
-#     "sys.c",
-#     "weak.c"
-# ] + select({
-#     ## $(UNIX_OR_WIN32) = 'unix' or 'win32', from configure script
-#     "//platform/os:linux?": ["unix.c"],
-#     "//platform/os:macos?": ["unix.c"],
-#     "//platform:windows_x86_32?": ["win32.c"], # using bazel naming
-#     # "//platform:windows_x86_64?": [???]
-#     "//conditions:default": []
-# })
+## if we compile main.c into libcamlrun.a zig will fail to find main
+## entry point.
+
+## but main is not really appropriate for a library anyway. but then
+## why is it shared with both bc and native? why does the latter
+## need it?
 
 filegroup(
     name = "bytecode_only_c_sources",
@@ -367,7 +292,7 @@ filegroup(
             "fail_byt.c",
             "fix_code.c",
             "interp.c",
-            # "main.c",
+            ### "main.c",  # see comment above
             "startup_byt.c",
         ],
     visibility = [
@@ -385,8 +310,6 @@ BYTECODE_ONLY_C_SOURCES = [
     "startup_byt.c"
 ]
 
-# RUNTIME_BYTECODE_C_SOURCES = COMMON_C_SOURCES + BYTECODE_ONLY_C_SOURCES
-
 filegroup(
     name = "native_only_c_sources",
     srcs = [
@@ -403,18 +326,6 @@ filegroup(
         "//bin:__pkg__"
     ]
 )
-
-NATIVE_ONLY_C_SOURCES = [
-  "backtrace_nat.c",
-  "clambda_checks.c",
-  "dynlink_nat.c",
-  "fail_nat.c",
-  "frame_descriptors.c",
-  "startup_nat.c",
-  "signals_nat.c"
-]
-
-# RUNTIME_NATIVE_C_SOURCES = COMMON_C_SOURCES + NATIVE_ONLY_C_SOURCES
 
 ########
 # genrule(
@@ -681,27 +592,60 @@ cc_binary(
 ## builds. so instead of distinguishing between e.g. vm and native
 ## builds we select on features. after all the vm/runtime is c code
 ## compiled to the native sys target, just like the native runtime.
-# cc_library(
-#     name = "commonrun",
-#     alwayslink = True,
-#     linkstatic = True,
-#     srcs = [":build_config.h", ##] + COMMON_C_SOURCES,
-#             ":common_c_sources"
-#     ],
-#     # srcs = COMMON_C_SOURCES,
-#     copts = [
-#         "-I$(GENDIR)/runtime", # pick up build_config.h
-#     ] + OC_CPPFLAGS,
-#     # + select({
-#     #     #FIXME: macos with compilation_mode == fastbuild
-#     #     "//platform/os:macos_fastbuild?": ["-UDEBUG"],
-#     #     "//conditions:default": []
-#     # }),
-#     defines = ["CAMLDLLIMPORT=", "IN_CAML_RUNTIME"] + CC_DEFINES,
-#     # defines = CC_DEFINES,
-#     deps = ["//runtime/caml:hdrs"],
-#     visibility = ["//visibility:public"]
-# )
+cc_library(
+    name = "commonrun",
+    alwayslink = True,
+    linkstatic = True,
+    srcs = [## ":build_config.h",
+        ":common_c_sources",
+        # "//runtime/caml:domain_state.h",
+        # "//runtime/caml:fail_h",
+    ],
+    deps = [
+        "//runtime/caml:hdrs",
+        "//runtime/caml:domain_state_h",
+        "//runtime/caml:fail_h",
+        "//runtime/caml:instruct_h",
+        ":primitives_h"
+    ],
+    copts = [
+        "-x", "c",
+        "-Iruntime",
+        "-Iruntime/caml",
+        "-I$(GENDIR)/runtime",
+        "-I$(GENDIR)/runtime/caml",
+        "$(OC_CFLAGS)",
+        "$(OC_CPPFLAGS)",
+    ] + select({
+        "//platform/os:macos?": ["-std=c11"],
+        "//platform/os:linux?": [],
+        "//conditions:default":  [] #"-std=c11"]
+    }) + select({
+        "//config/mode:pedantic?": ["-pedantic"],
+        "//conditions:default":  []
+    }) + select({
+        ":fastbuild?": [
+            # Bazel adds -DDEBUG on macos; why?
+            "-UDEBUG"
+        ],
+        "//conditions:default":  []
+    }) + OPTIMIZATION_FLAGS
+    ,
+    linkopts = ["$(OC_LDFLAGS)"]
+    + select({
+        # "//runtime:msan?": ["-fsanitize=leak", "-fPIE", "-pie"],
+        "//conditions:default": []
+    }) + select({
+        # "//runtime:asan": ["-fsanitize=address"],
+        "//conditions:default": []
+    })
+    ,
+    defines = RUNTIME_DEFINES,
+    # defines = ["CAMLDLLIMPORT=", "IN_CAML_RUNTIME"] + CC_DEFINES,
+    # defines = CC_DEFINES,
+    toolchains = ["//profile/system/local"],
+    visibility = ["//visibility:public"]
+)
 
 ################  PIC  ################
 ## if unix and SUPPORTS_SHARED_LIBRARIES (i.e. has dlopen)
@@ -988,4 +932,54 @@ string_list_flag(name = "args", build_setting_default = [],
 #         "> $@"
 #     ]),
 # )
+
+
+
+################################################################
+cc_library( ## TODO: make a macro
+    name = "addrmap",
+    linkstatic = True,
+    srcs = ["addrmap.c", "alloc.c"],
+    deps = [
+        "//runtime/caml:hdrs",
+        "//runtime/caml:domain_state_h",
+        "//runtime/caml:s_h",
+        ":primitives_h"
+    ],
+    copts = [
+        "-x", "c",
+        "-Iruntime/caml",
+        "-I$(GENDIR)/runtime/caml",
+        "$(OC_CFLAGS)",
+        "$(OC_CPPFLAGS)",
+    ] + select({
+        "//platform/os:macos?": ["-std=c11"],
+        "//platform/os:linux?": [],
+        "//conditions:default":  [] #"-std=c11"]
+    }) + select({
+        "//config/mode:pedantic?": ["-pedantic"],
+        "//conditions:default":  []
+    }) + select({
+        ":fastbuild?": [
+            # Bazel adds -DDEBUG on macos; why?
+            "-UDEBUG"
+        ],
+        "//conditions:default":  []
+    }) + OPTIMIZATION_FLAGS
+    ,
+    linkopts = ["$(OC_LDFLAGS)"]
+    + select({
+        # "//runtime:msan?": ["-fsanitize=leak", "-fPIE", "-pie"],
+        "//conditions:default": []
+    }) + select({
+        # "//runtime:asan": ["-fsanitize=address"],
+        "//conditions:default": []
+    })
+    ,
+    defines = RUNTIME_DEFINES,
+    # defines = ["CAMLDLLIMPORT=", "IN_CAML_RUNTIME"] + CC_DEFINES,
+    # defines = CC_DEFINES,
+    toolchains = ["//profile/system/local"],
+    visibility = ["//visibility:public"]
+)
 
