--- a/toolchain/adapter/BUILD.bazel
+++ b/toolchain/adapter/BUILD.bazel
@@ -3,6 +3,7 @@ exports_files(["BUILD.bazel"])
 load("//toolchain/adapter:BUILD.bzl", "toolchain_adapter")
 load("//toolchain/adapter:DEV_TOOLCHAIN.bzl", "dev_toolchain_adapter")
 load("//toolchain/adapter:mustache_tc_adapter.bzl", "mustache_toolchain_adapter")
+load("//toolchain/adapter:boot_tc_adapter.bzl", "boot_toolchain_adapter")
 
 ## NB: these are all the same, but for debugging they need different
 ## names. Use aliases?
@@ -49,7 +50,7 @@ dev_toolchain_adapter(
         "//conditions:default": []
     }) + select({
         ## FIXME: only for native (sys) targets
-        "//config:xmo?" : [],
+        "//config/ocaml:xmo?" : [],
         "//conditions:default": ["-opaque"]
     }),
     linkopts    = ["-nostdlib"],
@@ -77,7 +78,7 @@ toolchain_adapter(
         "//config/ocaml/compile:absname?" : ["-absname"],
         "//conditions:default": []
     }) + select({
-        "//config:xmo?" : [],
+        "//config/ocaml:xmo?" : [],
         "//conditions:default": ["-opaque"]
     }),
     structopts  = select({
@@ -103,7 +104,7 @@ toolchain_adapter(
         "//config/ocaml/compile:absname?" : ["-absname"],
         "//conditions:default": []
     }) + select({
-        "//config:xmo?" : [],
+        "//config/ocaml:xmo?" : [],
         "//conditions:default": ["-opaque"]
     }),
     structopts  = select({
@@ -115,8 +116,6 @@ toolchain_adapter(
     # warnings  - use defaults
     # primitives  = "//runtime:primitives",
 )
-
-mustache_toolchain_adapter(name = "mustache")
 
 toolchain_adapter(
     name        = "ocamlc.byte",
@@ -131,7 +130,7 @@ toolchain_adapter(
         "//config/ocaml/compile:absname?" : ["-absname"],
         "//conditions:default": []
     }) + select({
-        "//config:xmo?" : [],
+        "//config/ocaml:xmo?" : [],
         "//conditions:default": ["-opaque"]
     }),
     structopts  = select({
@@ -158,7 +157,7 @@ toolchain_adapter(
         "//config/ocaml/compile:absname?" : ["-absname"],
         "//conditions:default": []
     }) + select({
-        "//config:xmo?" : [],
+        "//config/ocaml:xmo?" : [],
         "//conditions:default": ["-opaque"]
     }),
     structopts  = select({
@@ -184,7 +183,7 @@ toolchain_adapter(
         "//config/ocaml/compile:absname?" : ["-absname"],
         "//conditions:default": []
     }) + select({
-        "//config:xmo?" : [],
+        "//config/ocaml:xmo?" : [],
         "//conditions:default": ["-opaque"]
     }),
     structopts  = select({
@@ -210,7 +209,7 @@ toolchain_adapter(
         "//config/ocaml/compile:absname?" : ["-absname"],
         "//conditions:default": []
     }) + select({
-        "//config:xmo?" : [],
+        "//config/ocaml:xmo?" : [],
         "//conditions:default": ["-opaque"]
     }),
     structopts  = select({
@@ -236,7 +235,7 @@ toolchain_adapter(
         "//config/ocaml/compile:absname?" : ["-absname"],
         "//conditions:default": []
     }) + select({
-        "//config:xmo?" : [],
+        "//config/ocaml:xmo?" : [],
         "//conditions:default": ["-opaque"]
     }),
     structopts  = select({
@@ -418,3 +417,30 @@ toolchain_adapter(
 #     # primitives  = "//runtime:primitives",
 # )
 
+mustache_toolchain_adapter(name = "mustache")
+
+boot_toolchain_adapter(
+    name        = "preproc",
+    copts       = [
+        "-nostdlib",  ## inserted by rule
+        "-strict-sequence",
+        # "-warn-error", "+A",
+    ] + select({
+        "//config/ocaml/compile:bin-annot?" : ["-bin-annot"],
+        "//conditions:default": []
+    }) + select({
+        "//config/ocaml/compile:absname?" : ["-absname"],
+        "//conditions:default": []
+    }) + select({
+        "//config/ocaml:xmo?" : [],
+        "//conditions:default": ["-opaque"]
+    }),
+    structopts  = select({
+        ## FIXME: -principal should not be used for boot stage
+        "//config/ocaml/compile:principal?" : ["-principal"],
+        "//conditions:default": []
+    }),
+    linkopts    = ["-nostdlib"],
+    # warnings  - use defaults
+    # primitives  = "//runtime:primitives",
+)
