--- a/config/config.initial.json
+++ b/config/config.initial.json
@@ -19,8 +19,8 @@
     "mkdll": "gcc -shared -undefined dynamic_lookup -Wl,-no_compact_unwind -Wl,-w  ",
     "mkexe": "$(CC) $(OC_CFLAGS) $(CFLAGS), $(OC_LDFLAGS) $(LDFLAGS)",
     "mkexe_args": " -O2 -fno-strict-aliasing -fwrapv -pthread  -Wl,-no_compact_unwind ",
-    "mkexe_cmd": "BAZEL_LINK_CMD",
-    "mkexe_exp": "gcc -O2 -fno-strict-aliasing -fwrapv -pthread , -Wl,-no_compact_unwind ",
+    "mkexe_cmd": "gcc -O2 -fno-strict-aliasing -fwrapv -pthread -Wl,-no_compact_unwind ",
+    "mkexe_exp": "gcc -O2 -fno-strict-aliasing -fwrapv -pthread -Wl,-no_compact_unwind ",
     "mkexe_cflags":  "$(OC_CFLAGS) $(CFLAGS)",
     "mkexe_extra_flags":  "",
     "mkexe_common_cflags":  "-O2 -fno-strict-aliasing -fwrapv -pthread",
