--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -5,7 +5,7 @@ load("//bzl:rules.bzl",
      "boot_library",
      # "boot_lexer",
      "build_module",
-     "build_tool",
+     # "build_tool",
      "compiler_module",
      "compiler_signature",
      "ocaml_tool"
