--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -165,8 +165,8 @@ BAZEL_ZIG_CC_VERSION = "v0.9.2"
 SHA256 = "73afa7e1af49e3dbfa1bae9362438cdc51cb177c359a6041a7a403011179d0b5"
 
 # not yet:
-# BAZEL_ZIG_CC_VERSION = "v1.0.0-rc1"
-# SHA256 = "07c8cc88faed737f5e7fc74b2bce94382486c40245b1ce718c6cd3774ba6be5f"
+BAZEL_ZIG_CC_VERSION = "v1.0.0-rc4"
+SHA256 = "af784b604c08f385358113dc41e22736369a8ad09951fecf31dd13c35f4aaa62"
 
 http_archive(
     name = "bazel-zig-cc",
